--- a/Lab02 assignment.qmd
+++ b/Lab02 assignment.qmd
@@ -1,27 +1,25 @@
 ---
-title: "Lab 2 Assignment: Group 02"
+title: "Lab 2 Assignment: Group 04"
 format:
   html:
     embed-resources: true
 editor: visual
 ---
-Group Exercise from Group 4
-Edir Sebastian Vidal Castro (s243564)
-Morten Orebo, Holmström (s242223)
-Nithiyashri, Jayashankar (s244356)
-Tilman Johannes, Nelissen (s233043)
+
+Group Exercise from Group 4 
+Edir Sebastian Vidal Castro (s243564), 
+Morten Orebo Holmström (s242223),
+Nithiyashri Jayashankar (s244356),
+Tilman Johannes Nelissen (s233043),
 Thea Rehm Rosholm (s225019)
 
-
-
 Loading packages
+
 ```{r}
-library(tidyverse)
-library(ggridges)
-library(RColorBrewer)
+library("tidyverse")
+library("ggridges")
+library("RColorBrewer")
 ```
-
-
 
 Reading in the data
 
@@ -35,8 +33,6 @@ output_file <- "gravier.RData"
 curl::curl_download(url = target_url, destfile = output_file)
 ```
 
-
-
 Loading output file and checking that the file is in our environment.
 
 ```{r}
@@ -44,9 +40,7 @@ load(output_file)
 ls()
 ```
 
-
-
-Data wrangling, which was predefined. 
+Data wrangling, which was predefined.
 
 ```{r}
 set.seed(676571)
@@ -60,12 +54,12 @@ cancer_data$age_group=cut(cancer_data$age,breaks=seq(10,100,by=10))
 cancer_data=relocate(cancer_data,c(pt_id,age,age_group,pt_id,event_label))
 ```
 
-
-
 We chose the probe g1A08 and use the package ggridges to show the distribution of probe fluorescence between patients with a good outcome and poor outcome.
+
 ```{r}
 ggplot(cancer_data, aes(x = g1A08, 
-                        y = event_label, fill = event_label)) +
+                        y = event_label,
+                        fill = event_label)) +
   geom_density_ridges(alpha = 0.7) +
   theme_bw() +
   labs(y = "Outcome",
@@ -74,4 +68,3 @@ ggplot(cancer_data, aes(x = g1A08,
   theme(legend.position = "none") + 
   scale_fill_brewer(palette = "Set2")
 ```
-
