--- a/Lab02 assignment.qmd
+++ b/Lab02 assignment.qmd
@@ -8,11 +8,11 @@ editor: visual
 
 ### Group Exercise from Group 4 
 
-Edir Sebastian Vidal Castro (s243564), 
-Morten Orebo Holmström (s242223),
-Nithiyashri Jayashankar (s244356),
-Tilman Johannes Nelissen (s233043),
-Thea Rehm Rosholm (s225019)
+- Edir Sebastian Vidal Castro (s243564), 
+- Morten Orebo Holmström (s242223),
+- Nithiyashri Jayashankar (s244356),
+- Tilman Johannes Nelissen (s233043),
+- Thea Rehm Rosholm (s225019)
 
 ### Downloading packages
 
