--- a/lab_04 assignment.qmd
+++ b/lab_04 assignment.qmd
@@ -25,7 +25,7 @@ library("here")
 
 
 # Loading data
-
+We use the `here()` function to go to the root directory of our project.
 ```{r}
 diabetes_data <- read_csv(file = here("data/diabetes (1).csv"))
 ```
