lab_05 excercise_MOH_code.qmd

--- a/lab_05 excercise_MOH_code.qmd
+++ b/lab_05 excercise_MOH_code.qmd
@@ -6,7 +6,7 @@ execute:
   warning: false
 ---
 
-### Group Exercise from Group 4
+## Group Exercise from Group 4
 
 -   Edir Sebastian Vidal Castro (s243564),
 -   Morten Orebo Holmström (s242223),
@@ -14,16 +14,7 @@ execute:
 -   Tilman Johannes Nelissen (s233043),
 -   Thea Rehm Rosholm (s225019)
 
-### Load libraries
-
-```{r}
-library("tidyverse")
-library("ggseqlogo")
-library("table1")
-library("here")
-```
-
-### Background
+## Background
 
 In the early 20s, the world was hit by the coronavirus disease 2019 (COVID-19) pandemic. The pandemic was caused by severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2). In Denmark, the virus first confirmed case was on 27 February 2020.
 
@@ -35,29 +26,39 @@ The data we will be working with today contains data on sequenced T-cell recepto
 
 “A large-scale database of T-cell receptor beta (TCR ) sequences and binding associations from natural and synthetic exposure to SARS-CoV-2” (Nolan et al. 2020).
 
-### Aim
+## Aim
 
 Today, we will emulate the situation, where you are working as a Bioinformatician / Bio Data Scientist and you have been given the data and the task of answering these two burning questions:
 
 What characterises the peptides binding to the HLAs? What characterises T-cell Receptors binding to the pMHC-complexes?
 
-# Load data
+## Load libraries
+
+```{r}
+library("tidyverse")
+library("ggseqlogo")
+library("table1")
+library("here")
+```
+
+## Load data
 
 ```{r}
 peptide_data <- read_csv(file = here("data/peptide-detail-ci.csv.gz"))
 meta_data <- read_csv(file = here("data/subject-metadata.csv"), na = "N/A")
-
 ```
 
 LESSON: If you know how NAs are encoded in the dataset you import then you can assing these as NAs when you import. Just use the function `na = "expression` inside the `read_*` function.
 
-# Description of data/exploratory data analysis
+## Description of data/exploratory data analysis
+
+### The Subject Meta Data
 
 We look at the metadata using `sample_n()` to get a random sample of data from the dataframe.
 
 ```{r}
 meta_data |> 
-sample_n(10)
+  sample_n(10)
 ```
 
 As there are 30 columns/variables.
@@ -68,7 +69,7 @@ dim(meta_data)
 
 And there are 144 observations.
 
-# Q2
+#### Q2
 
 Yes, there are groupings in the variables - the HLA-alleles A, B, C and the class II alleles. Re-creation of the plot. We use the ´Cohort`on the axis use the`geom_bar`geom. We then dodge on`Gender\`.
 
@@ -95,7 +96,7 @@ ggplot(mapping = aes(x = Cohort,
 
 LESSON: Here is to use the ´preserve = "single"´ inside the ´position_dodge´ if we have one group mapped to fill that does not have any observations. Additionally, we use theme(panel.grid.major.x = element_blank()) to modulate the gridlines in the plot.
 
-# T2
+#### T2
 
 Creating that plot we need to create a new variable termes ´age_group`by using the`cut()`function.  But as`Age\`apparently is a character here we need to convert it to numeric.
 
@@ -153,7 +154,7 @@ meta_data <- meta_data |>
   select(-c(`Cell Type`, Subject, `Target Type`))
 ```
 
-# T3:
+#### T3
 
 Look at the data and create yet another plot as you see fit. Also skip the redundant variables `Subject`, `Cell Type` and `Target Type`
 
@@ -176,7 +177,7 @@ meta_data |>
   
 ```
 
-# Making Table 1
+#### Making Table 1
 
 Making the table using the package `table1`.
 
@@ -189,7 +190,7 @@ meta_data |>
          data = _)
 ```
 
-# T4
+#### T4
 
 Wrangling by removing all HLA-II allele using the contains inside `select` to remove variables with DQ, DP or DR.
 
@@ -212,9 +213,11 @@ meta_data <- meta_data |>
 
 ```
 
-## Peptide dataset
+### The Peptide Details Data
 
-#Q3 Using dim(peptide_data)
+#### Q3 
+
+Using dim(peptide_data)
 
 ```{r}
 dim(peptide_data)
@@ -242,11 +245,11 @@ peptide_data |>
   sample_n(10)
 ```
 
-# Q4
+#### Q4
 
 Not tidy data as we have more than one value per cell.
 
-# Q5
+#### Q5
 
 We need to split up the `TCR BioIdentity` variable into several variables where we split on the `+` using the `separate_wider_delim` with `cols` selecting the variable that we want to split. `delim` the delimiter used and `names` describing the different names that the newly formed variables/columns should take.
 
@@ -265,7 +268,7 @@ peptide_data |>
 sample_n(10)
 ```
 
-# T7
+#### T7
 
 We should now count the amout of peptides per experiment. A proxy of the number of peptides in each experiment is the number of commas in `Amino Acids` + 1. Counting the number of peptides per experiment by counting the amount of commas "," using `str_count()` and then adding 1 to the count.
 
@@ -274,7 +277,7 @@ peptide_data <- peptide_data |>
 mutate(n_peptides = 1 + str_count(string = `Amino Acids`, pattern = ","))
 ```
 
-# T8
+#### T8
 
 Making plot with number of peptides per observation on x and Counts on y. Using `group_by()`.
 
@@ -300,11 +303,13 @@ peptide_data |>
 
 LESSON: Use the `theme(panel_border)` to modify if the plot should have any panels (box) around it. We use the `geom_hline` to get a horizontal line to make a nice x-axis.
 
-# Q4
+#### Q4
 
 I guess the maximum number of peptides assigned to one observation would be ´r max(peptide_data\$n_peptides)`so we have use the`max()\` function here using in line R-code in the Quarto document for dynamic reporting.
 
-#T9 Creating new variables "peptide_1" etc from `str_c` and `seq`. So `str_c` is a function that concatenates string.
+#### T9 
+
+Creating new variables "peptide_1" etc from `str_c` and `seq`. So `str_c` is a function that concatenates string.
 
 ```{r}
 str_c("peptide", seq(from = 1,to = 5, by = 1), sep = "_")
@@ -314,7 +319,7 @@ str_c("peptide", c(1, 2, 3, 4, 5), sep = "_")
 
 LESSON: Each element before the `sep` argument is looped over to create a new string. So I you want to concatenate a single string with varying strings afterwards you need to apply these string inside a concatenation `c()` in the function.
 
-# T10
+#### T10
 
 We need to separate the `Amino Acids` variable on the "," and create variables based on those. We should use the `separate_wider_delim` and not longer, as we want to apply more variables than the ones thar already exist.
 
@@ -331,15 +336,15 @@ separate_wider_delim(cols = `Amino Acids`,
 
 LESSON: *Read documentation properly* and for the specific functionality of `separate_delim_wider` it is a good idea to apply the `too_few = "debug"` argument. This presumably gives a warning, when some variables are not filled in but still runs the code. If the argument is not passed the code is not run.
 
-# Q5
+#### Q5
 
 Yes, we got the warning. Probably because we generate som observations with NAs as some experiments only include one peptide and not the maximum of 13.
 
-# Q6
+#### Q6
 
 I think we should discuss not the `n_peptide` but instead the `peptide_data`, and yes it is in wide format. We would like to pivot it longer to generate a variable termed `peptide_no`.
 
-# T11
+#### T11
 
 Running `sample_n` several times with different values of n.
 
@@ -350,7 +355,7 @@ peptide_data |>
 
 So the argument `size` indicates how many observations from the dataframe that you want to extract.
 
-# T12
+#### T12
 
 Testing our `pivot_longer` functions on the data by using first `sample_n` to extract some of the data. The `values_drop_na` arguments is set to TRUE, as we want the pivoting function to drop observations that have NAs int eh `values_to` column, which in this pivoting is `peptide`. So observations with `NA` in `peptide` are removed.
 
@@ -367,11 +372,11 @@ peptide_data |>
 
 LESSON: Use `values_drop_na` to ditch observations with NA in the value variable.
 
-# Q7
+#### Q7
 
 The `NA`s arise as some of the experiments do not have the maximum of 13 peptides in the experiment.
 
-# Making the entire `peptide_data` a long format
+#### Making the entire `peptide_data` a long format
 
 ```{r}
 peptide_data <- peptide_data |> 
@@ -382,7 +387,7 @@ peptide_data <- peptide_data |>
   select(!c(`Amino Acids_ok`, `Amino Acids_pieces`, `Amino Acids_remainder`, `Amino Acids`))
 ```
 
-# Q8
+#### Q8
 
 The number of rows and columns are
 
@@ -393,7 +398,7 @@ dim(peptide_data)
 
 596637 rows with 8 columns. We many more rows, as we have used the `Amino Acids` variable which was split up using the `separate_wider_delim` to create more columns/variables and then we have pivoted this more wide dataframe into a longer dataframe.
 
-# T13
+#### T13
 
 Deselecting the redundant `n_peptides`and `peptide_n`.
 
@@ -419,7 +424,7 @@ dim(peptide_data)
 
 We had more then 2 million observations, and now we are down to just 596637 observations and just 5 variables. And now the data is tidy, as we have one peptide per row and that is what we are looking for. ACTUALLY I´M A LITTLE BIT IN DOUBT ABOUT THIS, AS WE HAVE SOME VALUES THAT ARE THE SAME IN DIFFERENT OBSERVATIONS.
 
-# T14
+#### T14
 
 We need to identify if both the `CDR3b` and the `peptide` contain only the proteogenic amino acids. If they do not, they should be filtered out from the analysis. So we need to employ `str_detect`. But the `pattern` argument is special, as we provide the call to `[^ARNDCQEGHILKMFPSTWYV]`, which is a regular expression. Explanation: The hard brackets \[ \] are provided so tell `str_detect` that it should search for each of the elements in the `[^ARNDCQEGHILKMFPSTWYV]` meaning that the function should search for the presence of A to V elements individually, not as a whole string. The \^ is provided to negate the class (negating operator). This means that your are detecting/looking for elements in the vectors provided that are NOT included in the string in the \[\]. This means that with the command below we are looking for if there is patterns in the `CDR3b` and the `peptide` that are not contained in the `[^ARNDCQEGHILKMFPSTWYV]` vector. The `negate`argument reverses the selection. Below we set it to TRUE, as we do not want to filter out on observations that contain non-amino acids.
 
@@ -433,7 +438,7 @@ filter(!(str_detect(string = peptide, pattern = "[^ARNDCQEGHILKMFPSTWYV]", negat
 
 LESSON: You can't apply `str_detect` to several vectors at once. You need to use \|, & instead. The most important is that we have learnt how to use the \[\] to match not for a complete string but instead just to match for single elements within a vector. We have learnt that \^ is a negating operator meaning that we are looking for elements thar are NOT in the following expression. We use the ! the deselect observations that match the expression within `filter`.
 
-# T15
+#### T15
 
 We now add the variable `k_CDR3_b` and `k_peptide` which signifies the length of each of the respective sequences. Use the `str_length` and `mutate`.
 
@@ -443,7 +448,7 @@ peptide_data <- peptide_data |>
          k_peptide = str_length(string = peptide))
 ```
 
-# T16
+#### T16
 
 We will now create a histogram depicting the distribution of the number of `k_CDR3_b` with different lengths. We set the binwidth = 1, as we want all lengths to be mapped.
 
@@ -459,7 +464,7 @@ ggplot(data = peptide_data,
 
 ```
 
-# Q9
+#### Q9
 
 The predominant length of the ´CDR3_b\` sequences is calculated by
 
@@ -472,7 +477,7 @@ peptide_data |>
 
 We find that the most predominant length is 15 AA with 135465 having this length.
 
-# T17
+#### T17
 
 Creating plot with k_peptide on x-axis in a histogram
 
@@ -487,7 +492,7 @@ ggplot(data = peptide_data,
   theme(panel.border = element_blank())
 ```
 
-# Q10
+#### Q10
 
 The most predominant peptide sequence is evidently 9 amino acids, but we do the calculation anyhow
 
@@ -500,7 +505,7 @@ peptide_data |>
 
 With 310915 peptides of length 9 this is the most predominant length.
 
-# Q11
+#### Q11
 
 ```{r}
 peptide_data |> 
@@ -511,11 +516,13 @@ peptide_data |>
 
 I would say that it is tidy. One value per cell, and one observation per row and one variable per column. I TCR could be detected in several rows, but then it would map to a different peptide or a different experiment.
 
-# Q12
+### Creating one data set from two data sets
+
+#### Q12
 
 The data is in a wide format. We could for example easily make a pivot longer, where we converge on the A1 to C2 and make these into a column names `HLA-alleles`.
 
-# T18
+#### T18
 
 Haha, yeah that is exactly what the teachers suggest but we just use the `names_to = "Gene"` instead.
 
@@ -531,11 +538,11 @@ meta_data |>
   sample_n(10)
 ```
 
-# Q13
+#### Q13
 
 Only the `Experiment` variable is shared between the two dataframes so this variable defines the two observations.
 
-# Subsetting meta_data
+#### Subsetting `meta_data`
 
 To get only `Experiment`and `Allele`.
 
@@ -549,7 +556,7 @@ meta_data |>
   sample_n(10)
 ```
 
-# T19
+#### T19
 
 So in the `Allele` variable we only need to extract the first 7 characters in the string. To do this we use the function `str_sub` where we subset from character number 1 to character number 7 to get the name of `Allele_F_1_2`. We `drop_na` on the `Allele_F_1_2` and filter out `Allele_F_1_2` that have no values i.e. `""`.
 
@@ -562,7 +569,7 @@ mutate(Allele_F_1_2 = str_sub(Allele, start = 1, end = 7)) |>
 
 LESSON: Use `str_sub` (substrings) to extract strings from the `start` and the `end` position in the vector you provided.
 
-# T20
+#### T20
 
 We need to remove the asterisks \* and the redundant variables. I guess that the variables that we should remove are is just the `Allele` variable. To remove the asterisk we use `str_remove`.
 
@@ -574,7 +581,9 @@ meta_data <- meta_data |>
 
 LESSONS: First thing is that you need to provide the varialbe that you want to recode in a `mutate` verb. It does not help to just put it like `meta_data |> str_remove(string = vector, pattern = "pattern"). Second and very important lesson is that you need to escape the character ambiguity in`\*`. You do this by double backslashes`\\\`
 
-#T21 Creating a `dplyr` pipeline which starts with the `peptide_data`and joins on `meta_data`. We apply `unique` to get only unique observations.
+#### T21 
+
+Creating a `dplyr` pipeline which starts with the `peptide_data`and joins on `meta_data`. We apply `unique` to get only unique observations.
 
 ```{r}
 peptide_meta_data <- meta_data |> 
@@ -587,6 +596,12 @@ peptide_meta_data |>
   sample_n(10)
 ```
 
+## Analysis
+
+### Peptides binding to HLA
+
+#### T22
+
 We will now use `ggseqlogo` to show the binding affinity of the different amino acids in nonamer epitopes to HLA-A2:01. First we need to filter for observations that only look at nonamers e.g. k_peptide == 9 and then we need to select for HLA-A\*02:01. Finally, as the `ggseqlogo` takes out a vector we need to pull the peptide sequences using the `pull` function.
 
 ```{r}
@@ -596,7 +611,7 @@ peptide_meta_data |>
 ggseqlogo()
 ```
 
-# T23
+#### T23
 
 Doing the same for HLA-B\*07:02
 
@@ -607,11 +622,13 @@ peptide_meta_data |>
   ggseqlogo()
 ```
 
-# Q14
+#### Q14
 
 Not as clear here since I have made an error at some point, but we know that residues 2 and 9 are anchor residues for HLA-I alleles.
 
-# T24
+### CDR3b-sequences binding to pMHC
+
+#### T24
 
 We now look at the T-cell receptor with a length of the CDR3b that is 15 amino acids and binds to the peptide with the sequence LLFLVLIML presented by HLA-A2:01. So we need to filter for several parameters.
 
@@ -624,7 +641,13 @@ peptide_meta_data |>
 
 ```
 
-Okay, we should play around with even more TCR-sequences, HLA-types and HLA-alleles. Kind of irrelevant. What is the most interesting is which peptides bind most strongly to the different HLA-classes. We chose the longest CDR3_b for HLA-A3 and nonamer epitopes.
+## Further analysis - T25
+
+Okay, we should play around with even more TCR-sequences, HLA-types and HLA-alleles. Kind of irrelevant. What is the most interesting is which peptides bind most strongly to the different HLA-classes.
+
+### T-cells receptors binding to pMHC-complexes
+
+We chose the longest CDR3_b for HLA-A3 and 9-mer epitopes.
 
 ```{r}
 peptide_meta_data |> 
@@ -647,9 +670,13 @@ peptide_meta_data |>
   ggseqlogo()
 ```
 
-Honestly, it is more interesting to look at peptide binding motifs to frequenlty occurring HLA-alleles. Looking at HLA-A*03, HLA-A*26, HLA-B*27:02 and HLA-B*57.
+We can see that the positions 1 and 14 of the T-cell contributes the most on the binding affinity, having C and F correspondingly as the dominant amino acids.
 
-# A\*03:01 nonamers
+### Peptides binding to HLAs
+
+It is more interesting to look at peptide binding motifs to frequenlty occurring HLA-alleles. Looking at HLA-A*03, HLA-A*26, HLA-B*27:02 and HLA-B*57 we can do the following analysis.
+
+#### A\*03:01
 
 ```{r}
 peptide_meta_data |> 
@@ -658,7 +685,7 @@ peptide_meta_data |>
   ggseqlogo()
 ```
 
-# B\*27:02
+#### B\*27:02
 
 ```{r}
 peptide_meta_data |> 
@@ -667,7 +694,7 @@ peptide_meta_data |>
   ggseqlogo()
 ```
 
-# HLA-A26
+#### A\*26:01
 
 ```{r}
 peptide_meta_data |> 
@@ -676,7 +703,7 @@ peptide_meta_data |>
   ggseqlogo()
 ```
 
-# HLA-B\*57:01
+#### B\*57:01
 
 ```{r}
 peptide_meta_data |> 
@@ -685,6 +712,8 @@ peptide_meta_data |>
   ggseqlogo()
 ```
 
-# Comment on the disclaimer:
+Among the three alleles we can see strong evidence to determine that positions 2 and 9 of the 9-mer peptides are responsible for the high binding affinity, where the amino acid L is most predominant for both positions in the alleles studied.
 
-It would be nice to include the clinical data in the analysis.
+## Comment on the disclaimer:
+
+It would be nice to include the clinical data in the analysis. We can also look into some tools like the SYFPEITHI database of MHC ligands and peptide motifs to check if the amino acids and positions correspond to the predicted epitope AA predominance (eg. for the allele HLA-B\*27:02 the positions are also found at 2 and 9, but the amino acids from the epitopes at there appear different for one of them).
